# RRCLiveLaps

./: Cargo.toml  Dockerfile  README.md  config.json
.github/workflows/: build.yml
src/: app.js  config.rs  index.html  json_server.rs  main.rs  messages.rs  style.css  ws_handler.rs
src/converter/: decoder.rs
src/usb/: decoder.rs
web/: app.js  index.html  manage.html  mapping.json  style.css
