[package]
name = "rrclivelaps"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
rust-embed = "8.0"
webbrowser = "0.8"
mime_guess = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-util = { version = "0.7", features = ["codec"] }
tokio-serial = "5.4"
futures = "0.3"
local-ip-address = "0.6"
chrono = "0.4"
